# 2023-4e-turek-Strava.cz-klient

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  auto-canceling.toml  config.toml  docker-compose.yaml  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts  tsconfig.json
api/: Cargo.toml
api/src/: crawler.rs  db_client.rs  main.rs  utilities.rs
doc/source/: biblio.bib  main.tex  titlr.tex
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: ambient.d.ts  app.css  app.html
frontend/src/lib/: Alert.svelte  BlackList.svelte  BlackListMenu.svelte  DailyMenu.svelte  Error.svelte  Login.svelte  Menu.svelte  Navbar.svelte  Settings.svelte  TauriComunicationLayer.ts  WebComunicationLayer.ts  store.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/nastaveni/: +page.svelte
frontend/src/routes/objednavky/: +page.svelte
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: data_struct.rs  lib.rs  main.rs  request_builder.rs  strava_client.rs  strava_scraper.rs
src/lib/: DailyMenu.svelte  Menu.svelte
startup_script/: Cargo.toml
startup_script/src/: main.rs
strava-client/: Cargo.toml
strava-client/src/: automatic_client.rs  data_struct.rs  lib.rs  request_builder.rs  strava_client.rs  strava_scraper.rs
