[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-session ={ version ="0.9.0", features = ["cookie-session"]}
actix-cors = "0.7.0"
mongodb = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  
tokio = { version = "1.36", features = ["full"] }
strava-client = {path = "../strava-client"}
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json","cookies", "gzip", "deflate"] }
indexmap = "2.1.0"
bson = "2.9.0"
futures-util = "0.3.30"
rand = "0.8.5"
tokio-cron-scheduler = "0.10.0"
lazy_static = "1.4.0"



