[package]
name = "strava_client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "gzip", "deflate"] }
scraper = "0.18.1"
once_cell = "1.18.0"
indexmap = {version ="2.0.0", features = ["serde"] }
cached = "0.46.0"
chrono = {version ="0.4", features = ["serde"] }
fantoccini ="0.19.3"
tokio = { version = "1.12", features = ["full"] }
url = "2.4.1"
toml = "0.8.8"
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
