[package]
name = "strava_client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.1", features = ["blocking", "json", "cookies", "gzip", "deflate"] }
scraper = "0.19.0"
once_cell = "1.18.0"
indexmap = {version ="2.0.0", features = ["serde"] }
chrono = {version ="0.4", features = ["serde"] }
fantoccini ="0.19.3"
tokio = { version = "1.12", features = ["full"] }
url = "2.4.1"
toml = "0.8.8"
dotenv = "0.15.0"
keytar = "0.1.6"
bson = "2.8.1"
strava-client = { path = "../strava-client" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
