[package]
name = "startup_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "1.3.0"
log = "0.4.21"
strava-client = { path = "../strava-client" }
keytar = "0.1.6"
tokio = { version = "1", features = ["full"] }
toml = "0.8.12"
