[package]
name = "strava-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "gzip", "deflate"] }
scraper = "0.19.0"
once_cell = "1.18.0"
indexmap = {version ="2.0.0", features = ["serde"] }
chrono = {version ="0.4", features = ["serde"] }
fantoccini ="0.19.3"
tokio = { version = "1.12", features = ["full"] }
url = "2.4.1"
toml = "0.8.8"
dotenv = "0.15.0"
bson = "2.8.1"
futures ="0.3.30"
urlencoding = "2.1.3"